kubernetes/deployment.yaml
---
apiVersion: app/v1
kind: Deployment
metadata:
  name: travelease-booking
  labels:
    travelease.io/name: travelease-booking
    app.kubernetes.io/instance: travelease-deploy
    app.kubernetes.io/component: booking
    app.kubernetes.io/name: travelease-booking
    app.kubernetes.io/part-of: travelease-deploy
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      travelease.io/name: travelease-booking
  template:
    metadata:
      labels:
        travelease.io/name: travelease-booking  
        app.kubernetes.io/instance: travelease-deploy
        app.kubernetes.io/component: booking
        app.kubernetes.io/name: travelease-booking

    spec:
      serviceAccountName: travelease-deploy   
      containers:
        - name: travelease-booking
          image: 794038217891.dkr.ecr.ap-south-1.amazonaws.com/travelease/booking:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: service
---
apiVersion: app/v1
kind: Deployment
metadata:
  name: travelease-frontend
  labels:
    travelease.io/name: travelease-frontend
    app.kubernetes.io/instance: travelease-deploy
    app.kubernetes.io/name: travelease-frontend
    app.kubernetes.io/part-of: travelease-deploy
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      travelease.io/name: travelease-frontend
  template:
    metadata:
      labels:
        travelease.io/name: travelease-frontend  
        app.kubernetes.io/instance: travelease-deploy
        app.kubernetes.io/component: frontendproxy
        app.kubernetes.io/name: travelease-frontend

    spec:
      serviceAccountName: travelease-deploy   
      containers:
        - name: travelease-frontend
          image: 794038217891.dkr.ecr.ap-south-1.amazonaws.com/travelease/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: service
---
apiVersion: app/v1
kind: Deployment
metadata:
  name: travelease-login
  labels:
    travelease.io/name: travelease-login
    app.kubernetes.io/instance: travelease-deploy
    app.kubernetes.io/name: travelease-login
    app.kubernetes.io/part-of: travelease-deploy
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      travelease.io/name: travelease-login
  template:
    metadata:
      labels:
        travelease.io/name: travelease-login  
        app.kubernetes.io/instance: travelease-deploy
        app.kubernetes.io/component: login
        app.kubernetes.io/name: travelease-login

    spec:
      serviceAccountName: travelease-deploy   
      containers:
        - name: travelease-login
          image: 794038217891.dkr.ecr.ap-south-1.amazonaws.com/travelease/login:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
              name: service
---
apiVersion: app/v1
kind: Deployment
metadata:
  name: travelease-payment
  labels:
    travelease.io/name: travelease-payment
    app.kubernetes.io/instance: travelease-deploy
    app.kubernetes.io/name: travelease-payment
    app.kubernetes.io/part-of: travelease-deploy
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      travelease.io/name: travelease-payment
  template:
    metadata:
      labels:
        travelease.io/name: travelease-payment  
        app.kubernetes.io/instance: travelease-deploy
        app.kubernetes.io/name: travelease-payment
        app.kubernetes.io/component: payment

    spec:
      serviceAccountName: travelease-deploy   
      containers:
        - name: travelease-payment
          image: 794038217891.dkr.ecr.ap-south-1.amazonaws.com/travelease/payment:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5070
              name: service
